compiler/testData/diagnostics/tests/operatorsOverloading/until/simple.fir.kt
fun main(n: Int) {
    for (i in <!ITERATOR_MISSING!>0<!UNRESOLVED_REFERENCE!>..<<!>n<!>) {

    }
}